--- a/Act3-Home.html
+++ b/Act3-Home.html
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="KatrinaPicture2.JPG" class="d-block w-100" alt="Katrina's Ideathon Photo">
+                <img src="KatrinaPicture2.jpg" class="d-block w-100" alt="Katrina's Ideathon Photo">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>AWS Cloud Club Ideathon</h5>
                     <p>I participated in an ideathon by AWS Cloud Club BuildHers+ PUP Manila held on March 24, 2024 at the ECloud Valley Office, Taguig City, 
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="KatrinaPicture3.JPG" class="d-block w-100" alt="Katrina's Online Training Graduation Photo">
+                <img src="KatrinaPicture3.jpg" class="d-block w-100" alt="Katrina's Online Training Graduation Photo">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>1 Month Online Training for Programming (JAVA) NC III</h5>
                     <p>I completed a 1-month online training for Programming (JAVA) NC III by JOYSIS TECH VOC INC. and TESDA as a scholar, 
