--- a/Act3-Contact.html
+++ b/Act3-Contact.html
@@ -11,7 +11,7 @@
 
     <style>
         body {
-          background-image: url('Images/bgpic.jpg');
+          background-image: url('bgpic.jpg');
           background-size: cover; 
           background-position: center; 
           background-attachment: fixed; 
